add token control & list fragment